deploy/manifests/dev/us-east-2/tenant/storetheindex/instances/ber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer
spec:
  template:
    spec:
      serviceAccountName: storetheindex
      terminationGracePeriodSeconds: 600
      containers:
        - name: indexer
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            limits:
              cpu: "6"
              memory: 60Gi
            requests:
              cpu: "6"
              memory: 60Gi
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - r5n.2xlarge
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - us-east-2b
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ber-data-gp3
      tolerations:
        - key: dedicated
          operator: Equal
          value: r5n-2xl
          effect: NoSchedule
